Added views and Dockerfile
