# notavel/views/notes.py
@@ -1,0 +1,18 @@
+def get_notes(**kwargs):
+    pass
+
+
+def create_note(**kwargs):
+    pass
+
+
+def update_note(**kwargs):
+    pass
+
+
+def get_note(note_id):
+    pass
+
+
+def delete_note(note_id):
+    pass
