# notavel/views/tasks.py
@@ -1,0 +1,18 @@
+def get_tasks(**kwargs):
+    pass
+
+
+def create_task(**kwargs):
+    pass
+
+
+def update_task(**kwargs):
+    pass
+
+
+def get_task(task_id):
+    pass
+
+
+def delete_task(task_id):
+    pass
