# openapi/notavel-api.yml
@@ -86,7 +86,7 @@ paths:
       tags:
         - Tasks
       summary: Get all tasks
-      operationId: tasks.get_all_tasks
+      operationId: views.tasks.get_tasks
       parameters:
         - in: query
           name: project_id
@@ -111,7 +111,7 @@ paths:
       tags:
         - Tasks
       summary: Create new task
-      operationId: createTask
+      operationId: views.tasks.create_task
       requestBody:
         description: Task object to create.
         content:
@@ -127,7 +127,7 @@ paths:
       tags:
         - Tasks
       summary: Update new task
-      operationId: updateTask
+      operationId: views.tasks.update_task
       requestBody:
         description: Task object to update.
         content:
@@ -155,6 +155,7 @@ paths:
       tags:
         - Tasks
       summary: Get task by id
+      operationId: views.tasks.get_task
       responses:
         "200":
           description: OK
@@ -166,6 +167,7 @@ paths:
       tags:
         - Tasks
       summary: Delete single task by id
+      operationId: views.tasks.delete_task
       description: Changes the value of `is_deleted` to `true`
       responses:
         "200":
@@ -181,7 +183,7 @@ paths:
           schema:
             type: string
             description: Id of user.
-      operationId: getProjects
+      operationId: views.projects.get_projects
       responses:
         "200":
           description: OK
@@ -195,7 +197,7 @@ paths:
       tags:
         - Projects
       summary: Create new project
-      operationId: createProjects
+      operationId: views.projects.create_project
       requestBody:
         description: Note object to create.
         content:
@@ -210,7 +212,7 @@ paths:
       tags:
         - Projects
       summary: Update existing project
-      operationId: updateProject
+      operationId: views.projects.update_project
       requestBody:
         description: Project object to be updated.
         content:
@@ -230,6 +232,7 @@ paths:
       tags:
         - Projects
       summary: Get project by id
+      operationId: views.projects.get_project
       parameters:
         - in: path
           name: project-id
@@ -248,6 +251,7 @@ paths:
       tags:
         - Projects
       summary: Delete selected project
+      operationId: views.projects.delete_project
       parameters:
         - in: path
           name: project-id
@@ -265,7 +269,7 @@ paths:
       tags:
         - Notes
       summary: Create new note
-      operationId: create
+      operationId: views.notes.create_note
       requestBody:
         description: Note object to create.
         content:
@@ -280,7 +284,7 @@ paths:
       tags:
         - Notes
       summary: Update existing note
-      operationId: update
+      operationId: views.notes.update_note
       requestBody:
         description: Note object to be updated.
         content:
@@ -299,7 +303,7 @@ paths:
       tags:
         - Notes
       summary: Get all notes using query parameters.
-      operationId: get_all_notes
+      operationId: views.notes.get_notes
       parameters:
         - in: query
           name: user
@@ -323,6 +327,7 @@ paths:
       tags:
         - Notes
       summary: Get note by id
+      operationId: views.notes.get_note
       parameters:
         - in: path
           name: note-id
@@ -330,7 +335,6 @@ paths:
             type: string
           required: true
           description: Id of the note to get.
-      operationId: getNote
       responses:
         "200":
           description: OK
@@ -342,6 +346,7 @@ paths:
       tags:
         - Notes
       summary: Soft-delete note from store.
+      operationId: views.notes.delete_note
       parameters:
         - in: path
           name: note-id
